@@ -219,6 +219,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   PostgreSQL
 * (bug 17546) Correct Tongan language native name is "lea faka-Tonga"
 * (bug 17621) Special:WantedFiles has no link to Special:Whatlinkshere
+* (bug 17460) Client ecoding is now correctly set for PostgreSQL
 
 == API changes in 1.15 ==
 * (bug 16858) Revamped list=deletedrevs to make listing deleted contributions
